# scripts

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.python.yml  docker-compose.yml  pybot-down.ps1  pybot-up.ps1
data-py/pgdata/: postmaster.pid
data-py/pgdata/base/13768/: 2619
data-py/pgdata/base/13769/: pg_internal.init
data-py/pgdata/base/16384/: 1247  1249  1249_fsm  1255  1255_fsm  1255_vm  1259  16385  16391  16573  16576  16578  16592  16596  16612  16619  16624  16643  16644  16650  16651  16658  16659  16661  16663  16671  16678  16710  16736  16737  16745  2224  2579  2604  2606  2606_fsm  2608  2609  2609_vm  2610  (+30 more)
data-py/pgdata/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
data-py/pgdata/pg_stat/: db_0.stat  db_13769.stat  db_16384.stat  global.stat
data-py/pgdata/pg_stat_tmp/: db_0.stat  db_13769.stat  db_16384.stat  global.stat
data-py/pgdata/pg_xact/: 0000
pybot/: Dockerfile  README.md  TESTCASES.md  pyproject.toml  scripts.code-workspace
pybot/dickgrowerbot/: config.py  db.py  domain.py  help_content.py  i18n.py  incrementor.py  main.py  perks.py  repo.py  utils.py
pybot/dickgrowerbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pybot/tests/: test_i18n.py  test_incrementor.py  test_promo.py  test_time_till_next_day.py
